--- a/src/meson.build
+++ b/src/meson.build
@@ -6,7 +6,10 @@ asus_5606_ctl_deps = [
 ]
 
 executable('asus-5606-ctl', asus_5606_ctl_sources,
-  dependencies: asus_5606_ctl_deps,
+  dependencies: asus_5606_ctl_deps = [
+    dependency('gtkmm-4.0'),
+    dependency('libadwaita-1'),
+  ],
   install: true,
 )
 
