Add first feature
Added Fan control with privileges from polkit. Known Issue: Command execution and root prompt blocks main thread

--- a/meson.build
+++ b/meson.build
@@ -4,9 +4,11 @@ project('asus-5606-ctl', ['cpp', 'c'],
   default_options: [ 'warning_level=2', 'werror=false', 'cpp_std=gnu++2a', ],
 )
 
-
-
-
+# Install polkit policy
+install_data(
+  'dev.heggo.Asus5606ctl.policy',
+  install_dir: join_paths(get_option('datadir'), 'polkit-1', 'actions')
+)
 
 subdir('src')
 
